kubernetes/apps/monitoring/plausible/app/httproute-events.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plausible-events-proxy
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - t.iacob.co.uk
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/event
      backendRefs:
        - name: plausible-app
          port: 8000
