kubernetes/apps/monitoring/plausible/app/httproute-manual.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plausible-manual-proxy
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - m.iacob.co.uk
  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /js/script.manual.revenue.js
      backendRefs:
        - name: plausible-app
          port: 8000
