kubernetes/apps/monitoring/plausible/app/httproute-script.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plausible-script-proxy
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - s.iacob.co.uk
  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /js/script.file-downloads.outbound-links.pageview-props.revenue.tagged-events.js
      backendRefs:
        - name: plausible-app
          port: 8000
